# PowerTuning-CrewAI

./: README.md  pyproject.toml  report.html  report.md
src/crewaisearcher/: crew.py  main.py
src/crewaisearcher/config/: agents.yaml  tasks.yaml
